src/log/build_2021-05-31_16-32-25/tellobot/stderr.log
/usr/local/lib/python3.8/site-packages/setuptools/dist.py:642: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
/usr/local/lib/python3.8/site-packages/setuptools/dist.py:642: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  warnings.warn(
  File "/Users/peterchau/robotics/ros-drone/src/install/tellobot/lib/python3.8/site-packages/tellobot/tello_drone.py", line 204
    print "battery low,please repalce with a new one"
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("battery low,please repalce with a new one")?

